Bug 401730 - Anti-Aliasing checkbox is not remembered on exiting
Summary: Anti-Aliasing checkbox is not remembered on exiting
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: 4.1.5
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-04 10:23 UTC by tim
Modified: 2018-12-04 12:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tim 2018-12-04 10:23:14 UTC
SUMMARY
Anti-Aliasing checkbox is not remembered on exiting

STEPS TO REPRODUCE

1. Open a new file 
2. Change the tool options for the magic wand 
3. Turn off the anti-alising checkbox
4. Exit Krita
5. Open the file again


OBSERVED RESULT
The anti-aliasing checkbox does not get remembered, whereas the other options are

EXPECTED RESULT
All tool options should be rememebered

SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 David REVOY 2018-12-04 10:40:47 UTC
Yes, I already met this usability bug. I got used to it over the last years and forgot to report it. Thanks Tim, I'm switching the thread to confirmed.
Comment 2 Halla Rempt 2018-12-04 10:45:08 UTC
Git commit 05baa5b07c36dc69a2a0865c0155d886ab79f128 by Boudewijn Rempt.
Committed on 04/12/2018 at 10:44.
Pushed by rempt into branch 'master'.

Restore the anti-alias checkbox from the config

M  +6    -0    libs/ui/widgets/kis_selection_options.cc

https://commits.kde.org/krita/05baa5b07c36dc69a2a0865c0155d886ab79f128
Comment 3 Halla Rempt 2018-12-04 12:06:04 UTC
Git commit 943da7fbc7852d1e5f88e1f953f85ba6653d7206 by Boudewijn Rempt.
Committed on 04/12/2018 at 10:48.
Pushed by rempt into branch 'krita/4.1'.

Restore the anti-alias checkbox from the config

M  +10   -0    libs/ui/widgets/kis_selection_options.cc

https://commits.kde.org/krita/943da7fbc7852d1e5f88e1f953f85ba6653d7206