Restore the anti-alias checkbox from the config

BUG:401730